[gd_scene load_steps=6 format=3 uid="uid://coyehpxjs6onq"]

[ext_resource type="Script" path="res://Scripts/grid.gd" id="1_i1sxq"]
[ext_resource type="Texture2D" uid="uid://yqlf2waeo0xv" path="res://Art/background 2.png" id="1_lxerf"]
[ext_resource type="Texture2D" uid="uid://ca2bc6nr8f02o" path="res://Art/Top UI v 2.png" id="2_0qcrj"]
[ext_resource type="Texture2D" uid="uid://dqx1wrcmjfw46" path="res://Art/Bottom UI v 2.png" id="3_lh6ux"]
[ext_resource type="Script" path="res://Scripts/ice_holder.gd" id="5_1tk7m"]

[node name="game_window" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_lxerf")

[node name="top_ui" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_0qcrj")

[node name="bottom_ui" type="TextureRect" parent="."]
offset_top = 932.0
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("3_lh6ux")

[node name="grid" type="Node2D" parent="."]
script = ExtResource("1_i1sxq")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2
empty_spaces = PackedVector2Array(0, 0, 7, 0, 0, 9, 7, 9, 3, 4, 4, 4, 3, 5, 4, 5)
ice_spaces = PackedVector2Array(3, 0, 4, 0, 3, 9, 4, 9)

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource("5_1tk7m")

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
